added content to body section and css and images

--- a/index.html
+++ b/index.html
@@ -1,11 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/2ffc1bc183.js" crossorigin="anonymous"></script>
+    <title>DENY TSJAPANOV Designs</title>
 </head>
+
 <body>
-    
+    <section class="navbar-section">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand company-brand" href="#">DTS</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#features">Features</a>
+                    <a class="nav-item nav-link" href="#pricing">Pricing</a>
+                    <a class="nav-item nav-link" href="#about">About Us</a>
+                    <a class="nav-item nav-link" href="#contact">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </section>
+    <section class="banner">
+        <div class="jumbotron bg">
+            <h1 class="display-4">WELCOME TO <br> DTS DESIGNS</h1>
+            <h3 class="lead">Building a website made easy..</h3>
+            <br>
+            <h3 class="lead">..and providing you a variety of solutions to show your business to the world!</h3>
+            <br>
+            <a class="btn btn-info btn-lg" href="#pricing" role="button">Click here to find out more</a>
+            </p>
+        </div>
+    </section>
+
+    <section id="features">
+        <section class="features-icons bg-light text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <i class="features-icon fas fa-camera"></i>
+                            <h3 class="feature-header">SAY CHEESE!</h3>
+                            <p class="lead mb-0">Our awesome photographers and filmmakers will put you and your business in the spotlight!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <i class="features-icon fas fa-pen-nib"></i>
+                            <h3 class="feature-header">A LICK OF PAINT!</h3>
+                            <p class="lead mb-0">Our designers create the best looking websites based on responsiveness and good UI</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <i class="features-icon fas fa-laptop-code"></i>
+                            <h3 class="feature-header">HELLO WORLD!</h3>
+                            <p class="lead mb-0">Our developers will write code for your website that is fully responive and easy to use for all future modifications.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="pricing">
+
+        </section>
+    </section>
+
+    <section class="about">
+
+
+    </section>
+
+    <section class="contact">
+
+    </section>
+
 </body>
+
 </html>
