created a new section

--- a/index.html
+++ b/index.html
@@ -55,27 +55,50 @@
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <i class="features-icon fas fa-camera"></i>
                             <h3 class="feature-header">SAY CHEESE!</h3>
-                            <p class="lead mb-0">Our awesome photographers and filmmakers will put you and your business in the spotlight!</p>
+                            <p class="lead mb-0">Our awesome photographers and filmmakers will put you and your business
+                                in the spotlight!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <i class="features-icon fas fa-pen-nib"></i>
                             <h3 class="feature-header">A LICK OF PAINT!</h3>
-                            <p class="lead mb-0">Our designers create the best looking websites based on responsiveness and good UI</p>
+                            <p class="lead mb-0">Our designers create the best looking websites based on responsiveness
+                                and good UI</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <i class="features-icon fas fa-laptop-code"></i>
                             <h3 class="feature-header">HELLO WORLD!</h3>
-                            <p class="lead mb-0">Our developers will write code for your website that is fully responive and easy to use for all future modifications.</p>
+                            <p class="lead mb-0">Our developers will write code for your website that is fully responive
+                                and easy to use for all future modifications.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="showcase">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
 
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img"
+                        style="background-image: url('assets/images/phone.jpg');"></div>
+                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+                        <h2>Optimized for mobile</h2>
+                        <p class="lead mb-0">Have your website automatically optimzed for mobile devices!</p>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-6 text-white showcase-img"
+                        style="background-image: url('assets/images/hero-image.jpg');"></div>
+                    <div class="col-lg-6 my-auto showcase-text">
+                        <h2>Get your business out there!</h2>
+                        <p class="lead mb-0">It is one thing to have a killer-looking new website, but it's another to get your brand out in the open. We help you utilize the most of your SEO needs.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <section class="pricing">
