--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#features">Features</a>
                     <a class="nav-item nav-link" href="#pricing">Pricing</a>
-                    <a class="nav-item nav-link" href="#about">About Us</a>
                     <a class="nav-item nav-link" href="#contact">Contact</a>
                 </div>
             </div>
@@ -78,40 +77,154 @@
                 </div>
             </div>
         </section>
-        <section class="showcase">
-            <div class="container-fluid p-0">
-                <div class="row no-gutters">
-
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img"
-                        style="background-image: url('assets/images/phone.jpg');"></div>
-                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Optimized for mobile</h2>
-                        <p class="lead mb-0">Have your website automatically optimzed for mobile devices!</p>
-                    </div>
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-lg-6 text-white showcase-img"
-                        style="background-image: url('assets/images/hero-image.jpg');"></div>
-                    <div class="col-lg-6 my-auto showcase-text">
-                        <h2>Get your business out there!</h2>
-                        <p class="lead mb-0">It is one thing to have a killer-looking new website, but it's another to get your brand out in the open. We help you utilize the most of your SEO needs.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
         <section class="pricing">
+            <section class="pricing py-5">
+                <div class="container">
+                    <div class="row">
+                        <!-- Free Tier -->
+                        <div class="col-lg-4">
+                            <div class="card mb-5 mb-lg-0">
+                                <div class="card-body">
+                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Basic</h5>
+                                    <h6 class="card-price text-center">€199 <span class="period">/ one-time fee</span>
+                                    </h6>
+                                    <h6 class="card-price text-center">€24,99 <span class="period">/ month
+                                            (mainenance)</span></h6>
+                                    <hr>
+                                    <ul class="fa-ul">
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>An awesome brand new
+                                            website</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Optimized for all
+                                            devices</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited pages and
+                                            content</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 customer support
+                                        </li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>
+                                        </li>
+                                        <li class="text-muted"><span class="fa-li"><i
+                                                    class="fas fa-times"></i></span>Photography and videography services
+                                        </li>
+                                        <li class="text-muted"><span class="fa-li"><i
+                                                    class="fas fa-times"></i></span>Domain setup</li>
+                                        <li class="text-muted"><span class="fa-li"><i
+                                                    class="fas fa-times"></i></span>SEO assistance</li>
+
+                                    </ul>
+                                    <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Plus Tier -->
+                        <div class="col-lg-4">
+                            <div class="card mb-5 mb-lg-0">
+                                <div class="card-body">
+                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Plus</h5>
+                                    <h6 class="card-price text-center">€249 <span class="period">/ one-time fee</span>
+                                    </h6>
+                                    <h6 class="card-price text-center">€24,99 <span class="period">/ month
+                                            (mainenance)</span></h6>
+                                    <hr>
+                                    <ul class="fa-ul">
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>An awesome brand new
+                                            website</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Optimized for all
+                                            devices</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited pages and
+                                            content</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 customer support
+                                        </li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Photography and
+                                            videography services</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Domain setup</li>
+                                        <li class="text-muted"><span class="fa-li"><i
+                                                    class="fas fa-times"></i></span>SEO assistance</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Pro Tier -->
+                        <div class="col-lg-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Pro</h5>
+                                    <h6 class="card-price text-center">€299 <span class="period">/ one-time fee</span>
+                                    </h6>
+                                    <h6 class="card-price text-center">€24,99 <span class="period">/ month
+                                            (mainenance)</span></h6>
+                                    <hr>
+                                    <ul class="fa-ul">
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>An awesome brand new
+                                            website</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Optimized for all
+                                            devices</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited pages and
+                                            content</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 customer support</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Photography and
+                                            videography services</li>
+                                        <li><span class="fa-li"><i
+                                                    class="fas fa-check"></i></span>Domain setup</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>SEO assistance</li>
+                                    </ul>
+                                    <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </section>
     </section>
 
-    <section class="about">
-
-
-    </section>
 
     <section class="contact">
+        <section class="page-section" id="contact">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Contact Us</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                </div>
+                <form id="contactForm" name="sentMessage" novalidate="novalidate">
+                    <div class="row align-items-stretch mb-5">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <input class="form-control" id="name" type="text" placeholder="Your Name *"
+                                    required="required" data-validation-required-message="Please enter your name.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" id="email" type="email" placeholder="Your Email *"
+                                    required="required"
+                                    data-validation-required-message="Please enter your email address.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="form-group mb-md-0">
+                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *"
+                                    required="required"
+                                    data-validation-required-message="Please enter your phone number.">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group form-group-textarea mb-md-0">
+                                <textarea class="form-control" id="message" placeholder="Your Message *"
+                                    required="required"
+                                    data-validation-required-message="Please enter a message."></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <div id="success"></div>
+                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send
+                            Message</button>
+                    </div>
+                </form>
+            </div>
+        </section>
 
     </section>
 
