--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/2ffc1bc183.js" crossorigin="anonymous"></script>
-    <title>DENY TSJAPANOV Designs</title>
+    <title>DTS DESIGNS</title>
 </head>
 
 <body>
     <section class="navbar-section">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <a class="navbar-brand company-brand" href="#">DTS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,48 +27,53 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#features">Features</a>
+                    <a class="nav-item nav-link" href="#services">Services</a>
                     <a class="nav-item nav-link" href="#pricing">Pricing</a>
                     <a class="nav-item nav-link" href="#contact">Contact</a>
                 </div>
             </div>
         </nav>
     </section>
-    <section class="banner">
-        <div class="jumbotron bg">
-            <h1 class="display-4">WELCOME TO <br> DTS DESIGNS</h1>
-            <h3 class="lead">Building a website made easy..</h3>
-            <br>
-            <h3 class="lead">..and providing you a variety of solutions to show your business to the world!</h3>
-            <br>
-            <a class="btn btn-info btn-lg" href="#pricing" role="button">Click here to find out more</a>
-            </p>
-        </div>
+    <section class="header">
+        <header class="bg-primary py-5 mb-5">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center">
+                    <div class="col-lg-12">
+                        <h1 class="display-4 text-white mt-5 mb-2">WELCOME TO <br> DTS DESIGNS</h1>
+                        <h3 class="lead">Building a website made easy..</h3>
+                        <br>
+                        <h3 class="lead">..and providing you a variety of solutions to show your business to the world!
+                        </h3>
+                        <br>
+                        <a class="btn btn-info btn-lg" href="#pricing" role="button">Click here to find out more</a>
+                    </div>
+                </div>
+            </div>
+        </header>
     </section>
-
-    <section id="features">
-        <section class="features-icons bg-light text-center">
+    <section id="services">
+        <section class="services-icons bg-light text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <i class="features-icon fas fa-camera"></i>
+                        <div class="services-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <i class="services-icon fas fa-camera"></i>
                             <h3 class="feature-header">SAY CHEESE!</h3>
                             <p class="lead mb-0">Our awesome photographers and filmmakers will put you and your business
                                 in the spotlight!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <i class="features-icon fas fa-pen-nib"></i>
+                        <div class="services-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <i class="services-icon fas fa-pen-nib"></i>
                             <h3 class="feature-header">A LICK OF PAINT!</h3>
                             <p class="lead mb-0">Our designers create the best looking websites based on responsiveness
                                 and good UI</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                            <i class="features-icon fas fa-laptop-code"></i>
+                        <div class="services-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                            <i class="services-icon fas fa-laptop-code"></i>
                             <h3 class="feature-header">HELLO WORLD!</h3>
                             <p class="lead mb-0">Our developers will write code for your website that is fully responive
                                 and easy to use for all future modifications.</p>
@@ -77,15 +82,15 @@
                 </div>
             </div>
         </section>
-        <section class="pricing">
+        <section id="pricing">
             <section class="pricing py-5">
                 <div class="container">
                     <div class="row">
-                        <!-- Free Tier -->
                         <div class="col-lg-4">
                             <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
-                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Basic</h5>
+                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Basic
+                                    </h5>
                                     <h6 class="card-price text-center">€199 <span class="period">/ one-time fee</span>
                                     </h6>
                                     <h6 class="card-price text-center">€24,99 <span class="period">/ month
@@ -98,8 +103,8 @@
                                             devices</li>
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited pages and
                                             content</li>
-                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 customer support
-                                        </li>
+                                        <li class="text-muted"><span class="fa-li"><i
+                                                    class="fas fa-times"></i></span>24/7 customer support
                                         <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>
                                         </li>
                                         <li class="text-muted"><span class="fa-li"><i
@@ -111,15 +116,15 @@
                                                     class="fas fa-times"></i></span>SEO assistance</li>
 
                                     </ul>
-                                    <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                                    <a href="#" class="btn btn-block btn-info text-uppercase">Let's do this!</a>
                                 </div>
                             </div>
                         </div>
-                        <!-- Plus Tier -->
                         <div class="col-lg-4">
                             <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
-                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Plus</h5>
+                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Plus
+                                    </h5>
                                     <h6 class="card-price text-center">€249 <span class="period">/ one-time fee</span>
                                     </h6>
                                     <h6 class="card-price text-center">€24,99 <span class="period">/ month
@@ -140,18 +145,18 @@
                                         <li class="text-muted"><span class="fa-li"><i
                                                     class="fas fa-times"></i></span>SEO assistance</li>
                                     </ul>
-                                    <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                                    <a href="#" class="btn btn-block btn-info text-uppercase">Let's do this!</a>
                                 </div>
                             </div>
                         </div>
-                        <!-- Pro Tier -->
                         <div class="col-lg-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Pro</h5>
+                                    <h5 class="tier-header card-title text-muted text-uppercase text-center">DTS Pro
+                                    </h5>
                                     <h6 class="card-price text-center">€299 <span class="period">/ one-time fee</span>
                                     </h6>
-                                    <h6 class="card-price text-center">€24,99 <span class="period">/ month
+                                    <h6 class="card-price text-center">€49,99 <span class="period">/ month
                                             (mainenance)</span></h6>
                                     <hr>
                                     <ul class="fa-ul">
@@ -161,14 +166,14 @@
                                             devices</li>
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited pages and
                                             content</li>
-                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 customer support</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 customer support
+                                        </li>
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Photography and
                                             videography services</li>
-                                        <li><span class="fa-li"><i
-                                                    class="fas fa-check"></i></span>Domain setup</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Domain setup</li>
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>SEO assistance</li>
                                     </ul>
-                                    <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                                    <a href="#" class="btn btn-block btn-info text-uppercase">Let's do this!</a>
                                 </div>
                             </div>
                         </div>
@@ -180,49 +185,15 @@
     </section>
 
 
-    <section class="contact">
-        <section class="page-section" id="contact">
+    <section id="contact">
+        <section class="contact-section" id="contact">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="form-control" id="name" type="text" placeholder="Your Name *"
-                                    required="required" data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="email" type="email" placeholder="Your Email *"
-                                    required="required"
-                                    data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                            <div class="form-group mb-md-0">
-                                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *"
-                                    required="required"
-                                    data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group form-group-textarea mb-md-0">
-                                <textarea class="form-control" id="message" placeholder="Your Message *"
-                                    required="required"
-                                    data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send
-                            Message</button>
-                    </div>
-                </form>
+                <h3 class=company-brand-name>DTS DESIGNS</h3>
+                <h4 class="contact-details">Hellevoetstraat 7</h4>
+                <h4 class="contact-details">3081 NN</h4>
+                <h4 class="contact-details">Rotterdam, the Netherlands</h4>
+                <h5 class="contact-details">T: 0031 (0)6 5720 1029</h5>
+                <h5 class="contact-details">d.tsjapanov@gmail.com</h5>
             </div>
         </section>
 
