Updated html and css. added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
 </head>
 
 <body>
-    <section class="navbar-section">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <a class="navbar-brand company-brand" href="#">DTS</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#services">Services</a>
-                    <a class="nav-item nav-link" href="#pricing">Pricing</a>
-                    <a class="nav-item nav-link" href="#contact">Contact</a>
+    <section id="home">
+        <section class="navbar-section">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+                <a class="navbar-brand company-brand" href="#home">DTS</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="#home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="#services">Services</a>
+                        <a class="nav-item nav-link" href="#pricing">Pricing</a>
+                        <a class="nav-item nav-link" href="#contact">Contact</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </section>
     </section>
     <section class="header">
         <header class="bg-primary py-5 mb-5">
@@ -40,11 +42,11 @@
                 <div class="row h-100 align-items-center">
                     <div class="col-lg-12">
                         <h1 class="display-4 text-white mt-5 mb-2">WELCOME TO <br> DTS DESIGNS</h1>
-                        <h3 class="lead">Building a website made easy..</h3>
-                        <br>
-                        <h3 class="lead">..and providing you a variety of solutions to show your business to the world!
+                        <h3 class="header-par">Building a website made easy..</h3>
+
+                        <h3 class="header-par">..and providing you a variety of solutions to show your business to the
+                            world!
                         </h3>
-                        <br>
                         <a class="btn btn-info btn-lg" href="#pricing" role="button">Click here to find out more</a>
                     </div>
                 </div>
@@ -58,24 +60,27 @@
                     <div class="col-lg-4">
                         <div class="services-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <i class="services-icon fas fa-camera"></i>
-                            <h3 class="feature-header">SAY CHEESE!</h3>
-                            <p class="lead mb-0">Our awesome photographers and filmmakers will put you and your business
+                            <h3 class="services-header">SAY CHEESE!</h3>
+                            <p class="services-par mb-0">Our awesome photographers and filmmakers will put you and your
+                                business
                                 in the spotlight!</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="services-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <i class="services-icon fas fa-pen-nib"></i>
-                            <h3 class="feature-header">A LICK OF PAINT!</h3>
-                            <p class="lead mb-0">Our designers create the best looking websites based on responsiveness
+                            <h3 class="services-header">A LICK OF PAINT!</h3>
+                            <p class="services-par mb-0">Our designers create the best looking websites based on
+                                responsiveness
                                 and good UI</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="services-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <i class="services-icon fas fa-laptop-code"></i>
-                            <h3 class="feature-header">HELLO WORLD!</h3>
-                            <p class="lead mb-0">Our developers will write code for your website that is fully responive
+                            <h3 class="services-header">HELLO WORLD!</h3>
+                            <p class="services-par mb-0">Our developers will write code for your website that is fully
+                                responive
                                 and easy to use for all future modifications.</p>
                         </div>
                     </div>
