added functioning links for mail and call

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="home">
         <section class="navbar-section">
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-                <a class="navbar-brand company-brand" href="#home">DTS</a>
+                <a id="navbar-brand" class="navbar-brand company-brand" href="#home">DTS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -191,14 +191,14 @@
 
 
     <section id="contact">
-        <section class="contact-section" id="contact">
+        <section class="contact-section">
             <div class="container">
-                <h3 class=company-brand-name>DTS DESIGNS</h3>
+                <h3 class=company-brand-name><a id="company-brand-name" href="#home">DTS DESIGNS</a></h3>
                 <h4 class="contact-details">Hellevoetstraat 7</h4>
                 <h4 class="contact-details">3081 NN</h4>
                 <h4 class="contact-details">Rotterdam, the Netherlands</h4>
-                <h5 class="contact-details">T: 0031 (0)6 5720 1029</h5>
-                <h5 class="contact-details">d.tsjapanov@gmail.com</h5>
+                <h5 class="tel-number contact-details"><a id="call" href="tel:0031657201029">T: 0031 (0)6 5720 1029</a></h5>
+                <h5 class="contact-details"><a id="email" href="mailto:d.tsjapanov@gmail.com">d.tsjapanov@gmail.com</a></h5>
             </div>
         </section>
 
